service.yaml
apiVersion: v1
kind: Service
metadata:
  name: alimurat-hello-app
spec:
  type: LoadBalancer
  selector:
    app: alimurat-hello-app
  ports:
  - name: http
    port: 80
    targetPort: 8888
